# codecheck-case-master-1-

codecheck-case/: .gitignore  CMakeLists.txt
codecheck-case/cpp/BKCT_ArgumentNull/: BKCT_ArgumentNull_01.cpp
codecheck-case/cpp/BKCT_AssignItself/: BKCT_AssignItself_01.cpp
codecheck-case/cpp/BKCT_AssignOverflow/: BKCT_AssignOverflow_01.cpp
codecheck-case/cpp/BKCT_AutoFreeLeak/: BKCT_AutoFreeLeak_01.cpp
codecheck-case/cpp/BKCT_BackwardNull/: BKCT_BackwardNull_01.cpp  BKCT_BackwardNull_good_01.cpp
codecheck-case/cpp/BKCT_BadAllocArithmetic/: BKCT_BadAllocArithmetic_malloc_01.cpp  BKCT_BadAllocArithmetic_new_01.cpp
codecheck-case/cpp/BKCT_BadAllocStrlen/: BKCT_BadAllocStrlen_strlen_01.cpp
codecheck-case/cpp/BKCT_BadFree/: BKCT_BadFree_01.cpp
codecheck-case/cpp/BKCT_BadSizeof/: BKCT_BadSizeof_01.cpp  BKCT_BadSizeof_02.cpp
codecheck-case/cpp/BKCT_BoolParamCast/: BKCT_BoolParamCast_01.cpp  BKCT_BoolParamCast_02.cpp
codecheck-case/cpp/BKCT_CheckDelAdd/: BKCT_CheckDelAdd_01.cpp
codecheck-case/cpp/BKCT_CheckDelAddX/: BKCT_CheckDelAddX_01.cpp
codecheck-case/cpp/BKCT_CheckSetGift/: BKCT_CheckSetGift_01.cpp
codecheck-case/cpp/BKCT_ClassAccessSpecifierOrder/: BKCT_ClassAccessSpecifierOrder_private_public_01.cpp
codecheck-case/cpp/BKCT_ConstParam/: BKCT_ConstParam_01.cpp
codecheck-case/cpp/BKCT_ConstValidate/: BKCT_ConstValidate_func_variable_01.cpp
codecheck-case/cpp/BKCT_ConstantExpression/: BKCT_ConstantExpression_01.cpp
codecheck-case/cpp/BKCT_CreateNull/: BKCT_CreateNull_assign_01.cpp
codecheck-case/doc/: bkcheck测试套件规则.md
(+168 files in other folders)
